--- a/views/overview.pug
+++ b/views/overview.pug
@@ -43,3 +43,7 @@ block content
                             | 
                             span.card__footer-text= `rating (${tour.ratingsQuantity})`
                         a.btn.btn--green.btn--small(href=`/tour/${tour.slug}`) Details
+
+    if alert === 'booking'
+        script.
+            alert('Payment successful!');
